# comfyui-adaptiveprompts

./: .gitignore  LICENSE  README.md  __init__.py  adaptive_prompts.py  generator.py  image_nodes.py  prompt_generator.py  prompt_repack.py  prompt_rewrap.py  pyproject.toml  string_utils.py  tag_alias.py  weight_lifter.py  wildcard_preprocessor.py
.github/workflows/: publish.yml
py/: generator.py  math_utils.py  misc_utils.py  prompt_alias.py  prompt_generator.py  prompt_mix.py  prompt_mixer.py  prompt_repack.py  prompt_replace.py  prompt_sequencer.py  prompt_shuffle.py  prompt_splitter.py  prompt_trimmer.py  string_utils.py  tag_alias.py  weight_lifter.py  wildcard_utils.py
repack/: blacklist.txt
rewrapper/: blacklist.txt
tag_alias_files/: tag_aliases.txt
wildcard_examples/: adj.txt  animal.txt  chance.txt  character.txt  clothing.txt  color.txt  concept.txt  drink.txt  envi.txt  food.txt  fruit.txt  furniture.txt  glitch.txt  hello.txt  instrument.txt  interacting.txt  meal.txt  nest.txt  prompt.txt  quality.txt  room.txt  series_fantasy.txt  test.txt  vehicle.txt  weapon.txt  year.txt
wildcard_examples/environment/: cave.txt  forest.txt
wildcard_examples/hair/: color.txt  style.txt
wildcards_awesome/: fruit.txt
workflow/: AdaptivePromptsExamples.json
